Add toggle choice

--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,10 @@ navbar:
       href: index.html
     - text: "Albania Past Benchmarking"
       href: Past_benchmarking_Albania_overview.html
+    - text: "El Salvador Past Benchmarking"
+      href: Past_benchmarking_SLV_overview.html
+    - text: "Laos Past Benchmarking"
+      href: Past_benchmarking_Laos_overview.html
     - text: "Benchmark Database Update"
       href: User_guide.html
 output:
