--- a/_site.yml
+++ b/_site.yml
@@ -15,6 +15,8 @@ navbar:
       href: Past_benchmarking_CIV_overview.html
     - text: "Database Update"
       href: User_guide.html
+    - text: "MAR prediction"
+      href: Morocco_GDP_prediction.html
 output:
   html_document:
     theme: cosmo
